--- a/src/main/resources/templates/alunos/index.html
+++ b/src/main/resources/templates/alunos/index.html
@@ -1,95 +1,69 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{fraguimentos :: head('Lista de Alunos')}"></head>
+<!DOCTYPE html>
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/layout :: head('Lista de Alunos')}"></head>
 
 <body>
-	<header th:replace="~{fraguimentos :: header('Lista de Alunos')}"></header>
+    <!-- Substituindo a estrutura de cabeçalho -->
+    <header th:replace="~{fragments/layout :: header('Lista de Alunos')}"></header>
 
-	<div class="container mt-4">
-		<div class="row">
-			<div class="col-12">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th scope="col">Código</th>
-							<th scope="col">Nome</th>
-							<th scope="col">Endereço</th>
-							<th scope="col">Cidade</th>
-							<th scope="col">UF</th>
-							<th scope="col"></th>
-							<th scope="col"></th>
-							<th scope="col"></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="aluno : ${alunos}">
-							<th 
-								class="col-1" scope="row" th:text="${aluno.codigo}">ID
-							</th>
-							<td 
-								class="col-4" th:text="${aluno.nome}">Nome do aluno
-							</td>
-							<td 
-								class="col-2" th:text="${aluno.endereco}">Endereço
-							</td>
-							<td 
-								class="col-2" th:text="${aluno.cidade}">Cidade
-							</td>
-							<td 
-								class="col-2" th:text="${aluno.unidadeFederacao.sigla}">UF
-							</td>
-							<td class="col-1"><a
-								th:href="@{/alunos/{alunoId}(alunoId = ${aluno.codigo})}">Detalhes</a>
-							</td>
-							<td class="col-1"><a
-								th:href="@{/alunos/{alunoId}/edit(alunoId = ${aluno.codigo})}">Editar</a>
-							</td>
-							<td class="col-1"><a 
-								role="button" data-bs-toggle="modal" th:data-bs-target="${'#deleteAluno' + aluno.codigo}" href="">Deletar
-							</a>
-                               <form th:action="@{/alunos/{alunoId}/delete(alunoId = ${aluno.codigo})}" method="post">
-								 <!-- Modal Deletar -->
-								<div class="modal fade" th:id="${'deleteAluno' +aluno.codigo}" tabindex="-1"
-									aria-labelledby="exdeleteCliente" aria-hidden="true">
-									<div class="modal-dialog">
-										<div class="modal-content">
-											<div class="modal-header">
-												<h5 class="modal-title" id="exdeleteAluno">Deletar
-													Aluno</h5>
-												<button type="button" class="btn-close"
-													data-bs-dismiss="modal" aria-label="Close">
-												</button>
-											</div>
-											<div class="modal-body">
-												<p>Deseja realmente deletar o item? <span th:text="${aluno.nome}"></span></p>
-											</div>
-											<div class="modal-footer">
-												<button type="button" class="btn btn-secondary"
-													data-bs-dismiss="modal">Fechar</button>
-												<button 
-													type="submit" class="btn btn-primary">Deletar
-												</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- Fim Modal Deletar -->
-								</form> </td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="row">
-			<a href="/alunos/new">Novo aluno</a>
-		</div>
-	</div>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Código</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Endereço</th>
+                            <th scope="col">Cidade</th>
+                            <th scope="col">UF</th>
+                            <th colspan="3">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="aluno : ${alunos}">
+                            <td th:text="${aluno.codigo}">ID</td>
+                            <td th:text="${aluno.nome}">Nome</td>
+                            <td th:text="${aluno.endereco}">Endereço</td>
+                            <td th:text="${aluno.cidade}">Cidade</td>
+                            <td th:text="${aluno.unidadeFederacao.sigla}">UF</td>
+                            <td><a th:href="@{/alunos/{alunoId}(alunoId=${aluno.codigo})}">Detalhes</a></td>
+                            <td><a th:href="@{/alunos/{alunoId}/edit(alunoId=${aluno.codigo})}">Editar</a></td>
+                            <td>
+                                <a role="button" data-bs-toggle="modal"
+                                   th:data-bs-target="${'#deleteAluno' + aluno.codigo}">Deletar</a>
 
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-		crossorigin="anonymous"></script>
+                                <form th:action="@{/alunos/{alunoId}/delete(alunoId=${aluno.codigo})}" method="post">
+                                    <div class="modal fade" th:id="${'deleteAluno' + aluno.codigo}" tabindex="-1">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title">Deletar Aluno</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Deseja realmente deletar o aluno <span th:text="${aluno.nome}">?</span>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                                    <button type="submit" class="btn btn-primary">Deletar</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <a class="btn btn-success w-auto" href="/alunos/new">Novo aluno</a>
+        </div>
+    </div>
+
+    <!-- Substituindo a estrutura do footer -->
+    <footer th:replace="~{fragments/layout :: footer}"></footer>
 </body>
-</html> 
+</html>
