--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
-
- <head th:replace="~{fraguimentos :: head('Home')}"></head>
+<!DOCTYPE html>
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/layout :: head('Home')}"></head>
 
 <body>
+    <header th:replace="~{fragments/layout :: header('Sistema de Gestão de Alunos')}"></header>
 
-	 <header th:replace="~{fraguimentos :: header('Sistema de Gestão de Alunos')}"></header>
+    <main class="container mt-5">
+        <h1>Bem-vindo ao sistema!</h1>
+        <p>Use o menu para navegar pelas opções disponíveis.</p>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" 
-    crossorigin="anonymous"></script>
+        <!-- Botão para acessar a lista de alunos -->
+        <a class="btn btn-primary mt-3" th:href="@{/alunos}">Ver Lista de Alunos</a>
+    </main>
+
+    <footer th:replace="~{fragments/layout :: footer}"></footer>
 </body>
-</html> 
+</html>
